# RAG-based-documentation-bot

./: README.md  main.py  pyproject.toml  rough.ipynb
data/: RealCostOfHS2.txt
